# spiral_new

./: .gitignore  8ENV_DATASET_ANALYSIS_REPORT.md  FINAL_PARSER_ANALYSIS.md  LICENSE  Makefile  NEW_ENVIRONMENTS_README.md  NO_FALLBACK_TEST_RESULTS.md  OBSERVATION_WRAPPER_GUIDE.md  PARSER_QUESTIONS_ANSWERED.md  PARSING_ANALYSIS_REPORT.md  QUERY_ANSWERS_SUMMARY.md  README.md  TWODOLLAR_MAXROUNDS_CHANGE.md  UPDATED_PARSER_TEST_RESULTS.md  pyproject.toml  run.sh  run_4b_2env.sh  run_4b_ins.sh  run_multi_node.sh  run_qwen2p5_3b.sh  run_qwen2p5_7b.sh  test_8env_parsers.py  test_updated_parsers.py  train_spiral.py  validate_parsers.py  verify_envs.py
TextArena/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test.py
TextArena/examples/: offline_evaluation.py  offline_play.py  online_play.py  online_play_mindgameschallenge.py
TextArena/textarena/: __init__.py  api.py  core.py  state.py
TextArena/textarena/agents/: __init__.py  basic_agents.py  wrappers.py
TextArena/textarena/envs/: README.md  __init__.py  registration.py
TextArena/textarena/envs/Alquerque/: env.py
TextArena/textarena/envs/BabyAiText/: README.md  env.py  tests.py
TextArena/textarena/envs/Bandit/: env.py
TextArena/textarena/envs/Battleship/: env.py  renderer.py
TextArena/textarena/envs/Blackjack/: env.py
TextArena/textarena/envs/BlindAuction/: README.md  env.py  renderer.py
TextArena/textarena/envs/Breakthrough/: env.py  renderer.py
TextArena/textarena/envs/CharacterConclave/: env.py  renderer.py
TextArena/textarena/envs/Checkers/: env.py  renderer.py
TextArena/textarena/envs/Chess/: env.py  renderer.py
TextArena/textarena/envs/Chopsticks/: env.py
TextArena/textarena/envs/Codenames/: env.py
TextArena/textarena/envs/ColonelBlotto/: env.py
TextArena/textarena/envs/ConnectFour/: env.py  renderer.py
TextArena/textarena/envs/Countdown/: env.py
TextArena/textarena/envs/Coup/: README.md  base_coup_prompts.py  coup_types.py  env.py
TextArena/textarena/envs/Crosswords/: env.py  renderer.py  words_clues.jsonl
TextArena/textarena/envs/Crusade/: env.py
TextArena/textarena/envs/Cryptarithm/: env.py
TextArena/textarena/envs/Debate/: env.py  renderer.py  topics.json
TextArena/textarena/envs/Diplomacy/: env.py  game_engine.py  map_fstring.py
TextArena/textarena/envs/DontSayIt/: env.py
TextArena/textarena/envs/FifteenPuzzle/: env.py  renderer.py
TextArena/textarena/envs/FrozenLake/: env.py
TextArena/textarena/envs/Game2048/: env.py
TextArena/textarena/envs/GameOfPureStrategy/: env.py
TextArena/textarena/envs/GermanWhist/: README.md  env.py
TextArena/textarena/envs/Golf/: README.md  env.py
TextArena/textarena/envs/GuessTheNumber/: env.py  renderer.py
TextArena/textarena/envs/GuessWho/: characters.json  env.py
TextArena/textarena/envs/Hanabi/: README.md  env.py  renderer.py
TextArena/textarena/envs/Hangman/: env.py  renderer.py
TextArena/textarena/envs/HighSociety/: env.py
TextArena/textarena/envs/IndianPoker/: env.py
TextArena/textarena/envs/IteratedMatchingPennies/: env.py
TextArena/textarena/envs/IteratedPrisonersDilemma/: env.py  renderer.py
TextArena/textarena/envs/IteratedRockPaperScissors/: env.py  renderer.py
TextArena/textarena/envs/IteratedStagHunt/: env.py  renderer.py
TextArena/textarena/envs/IteratedTwoThirdsAverage/: env.py
TextArena/textarena/envs/IteratedUltimatumGame/: env.py  renderer.py
TextArena/textarena/envs/Klondike/: __init__.py  env.py  klondike.py
TextArena/textarena/envs/KuhnPoker/: env.py  renderer.py
TextArena/textarena/envs/LeTruc/: env.py
TextArena/textarena/envs/LeducHoldem/: env.py
TextArena/textarena/envs/LetterAuction/: README.md  env.py
TextArena/textarena/envs/LiarsDice/: env.py  renderer.py
TextArena/textarena/envs/LightsOut/: README.md  env.py  renderer.py
TextArena/textarena/envs/LinesOfAction/: env.py
TextArena/textarena/envs/LogicPuzzle/: README.md  env.py  game_board_clues.jsonl  renderer.py
TextArena/textarena/envs/MarketEntryGame/: env.py  renderer.py
TextArena/textarena/envs/Mastermind/: env.py  renderer.py
TextArena/textarena/envs/MemoryGame/: README.md  env.py  renderer.py
TextArena/textarena/wrappers/: __init__.py
oat/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
oat/benchmark/: README.md  llama3_oat.sh  postprocess.py  pythia_custom_remote_rm.py  pythia_oat.sh  pythia_trl.sh
oat/docs/: alignment_as_cdb.md  preference_learning_examples.md  reasoning_examples.md
oat/examples/: math_rl.sh  math_rl_lora.sh  multi_turn_sft.sh
oat/examples/debug/: sft_debug.sh
oat/examples/dry_run/: README.md  dry_run_rl.sh  dry_run_sft.sh
oat/examples/legacy/: 2gpu_online_simpo_pythia_1b_tldr_pairrm.sh  2gpu_online_simpo_pythia_1b_tldr_skyworkrm.sh  8gpu_online_dpo_pythia_1b_tldr_gpt_judge.sh  8gpu_online_dpo_pythia_1b_tldr_skyworkrm.sh  8gpu_sea_dpo_pythia_1b_tldr_skyworkrm.sh  8gpu_sft_math.sh  offline_dpo_llama3_8b_ultrafeedback.sh  r1_zero_countdown.py
oat/k8s/: README.md  hostfile.py  readiness.sh  rm-service-armo.yaml  rm-service.yaml  serving-armo.yaml  serving.yaml  values.yaml
oat/oat/: __about__.py  args.py  exploration.py  interface.py  model.py  multistep.py  prompts.py  types.py
oat/oat/actors/: __init__.py  base.py  preference.py  reward.py
oat/oat/algorithms/: apl.py  ppo.py  ppo_multiturn.py  rft.py  xpo.py
oat/oat/collectors/: __init__.py  asynchronous.py  base.py
oat/oat/experiment/: main.py  run_apl.py  run_math_rl.py  run_offline.py  run_offline_lp.py  run_offline_ppo.py  run_ppo.py  run_xpo.py
oat/oat/learners/: __init__.py  base.py  dap.py  dap_with_rm.py  loss.py  ntp.py  offline.py  offline_dap.py  rl.py  sft.py
oat/oat/oracles/: __init__.py  base.py  countdown.py  gpt.py  math.py
oat/oat/rm/: backbone.py  model.py  networks.py  uncertainty.py
oat/oat/utils/: buffer.py  data.py  deepspeed.py  distributed.py  ipc.py  launcher.py  lm_head.py  math_grader.py  ops.py  slicer.py
oat/scripts/: evaluate_model.py  inference.py
oat/test/: test_rm_server.py  test_trajectory_dataset.py
(+322 files in other folders)
